# citizenhack.old2

./: .dockerignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md
data/actor/: cat.df  chimera.df  human.df  kitten.df  large_cat.df  newt.df  red_dragon.df  snow_leopard.df  tiger.df  wizard_of_yendor.df
data/actor_class/: dawrf.df  demon.df  dragon.df  feline.df  fungi.df  humanoid.df  lich.df  reptile.df
include/: action_move.h  actor.h  actor_class.h  actor_data.h  actor_id.h  actor_store.h  actors.h  archive.h  archive_file.h  dungeon.h  dungeon_generator_standard.h  dungeon_level.h  game.h  monster.h  monster_data.h  monster_id.h  msg_system.h  rect.h  renderer.h  screen.h  set.h  stats.h  symbol.h  tile_data.h  tile_id.h  vector.h
script/: make_archive  make_data
script/lib/: actor.rb  actor_class.rb  archive.rb  data_file.rb  identifier_pool.rb
src/: CMakeLists.txt  action_move.cpp  actor.cpp  actor_class.cpp  actor_data.cpp  actors.cpp  archive.cpp  archive_file.cpp  dungeon.cpp  dungeon_generator_standard.cpp  dungeon_level.cpp  game.cpp  main.cpp  monster.cpp  monster_data.cpp  msg_system.cpp  renderer.cpp  screen.cpp  tile_data.cpp
src/hack/: CMakeLists.txt  action.h  action_move.cpp  action_move.h  actor.cpp  actor.h  actor_class.cpp  actor_class.h  actor_data.cpp  actor_data.h  ai.h  archive.cpp  archive.h  archive_file.cpp  archive_file.h  config.h.in  dungeon.cpp  dungeon.h  dungeon_generator_standard.cpp  dungeon_generator_standard.h  dungeon_level.cpp  dungeon_level.h  game.cpp  game.h  hero.h  main.cpp  msg_system.cpp  msg_system.h  non_copyable.h  rect.h  renderer.cpp  renderer.h  screen.cpp  screen.h  set.h  symbol.h  tile_data.cpp  tile_data.h  types.h
src/hack/dungeon/: branch.cpp  branch.h  branch_data.h  dungeon.cpp  dungeon.h  level.cpp  level.h  room.h
src/hack/math/: rect.h  rng.cpp  rng.h
src/libwish/: CMakeLists.txt  attr.c  clear.c  draw.c  read.c  unicode.c  wish_frame.h  wish_term.h  wish_view.h
